--- a/rank42/requirements.txt
+++ b/rank42/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.2.7
 certifi==2020.4.5.1
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==3.0.6
+Django>=2.7
 gunicorn==20.0.4
 idna==2.9
 psycopg2-binary==2.8.5
