비밀키를 담을  json 파일 gitignore 처리

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,6 @@ pip-selfcheck.json
 .history
 
 # End of https://www.gitignore.io/api/venv,django,pycharm,visualstudiocode
+
+### MY SETTINGS ###
+secret_info_file.json
