--- a/rank42/requirements.txt
+++ b/rank42/requirements.txt
@@ -1,18 +1,25 @@
+amqp==2.6.1
 asgiref==3.2.10
+billiard==3.6.3.0
+celery==4.4.7
 certifi==2020.4.5.1
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.1
+django-celery-results==1.2.1
 django-pandas==0.6.2
 gunicorn==20.0.4
 idna==2.9
+kombu==4.6.11
 numpy==1.18.4
 pandas==1.0.4
 psycopg2-binary==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
+redis==3.5.3
 requests==2.23.0
 six==1.15.0
 sqlparse==0.3.1
 urllib3==1.25.9
+vine==1.3.0
 whitenoise==5.0.1
