--- a/seoul42/requirements.txt
+++ b/seoul42/requirements.txt
@@ -4,22 +4,35 @@ billiard==3.6.3.0
 celery==4.4.7
 certifi==2020.4.5.1
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.1
 django-celery-results==1.2.1
 django-pandas==0.6.2
+djangorestframework==3.11.1
+drf-yasg==1.17.1
 gunicorn==20.0.4
 idna==2.9
+inflection==0.5.0
+itypes==1.2.0
+Jinja2==2.11.2
 kombu==4.6.11
+MarkupSafe==1.1.1
 numpy==1.18.4
+packaging==20.4
 pandas==1.0.4
 psycopg2-binary==2.8.5
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 redis==3.5.3
 requests==2.23.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
 six==1.15.0
 sqlparse==0.3.1
+uritemplate==3.0.1
 urllib3==1.25.9
 vine==1.3.0
 whitenoise==5.0.1
