--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       context: seoul42/
       dockerfile: Dockerfile
     command: bash -c "
+        pip install -r requirements.txt &&
         python manage.py migrate &&
         python manage.py runserver 0.0.0.0:8000
       "
