--- a/seoul42/requirements.txt
+++ b/seoul42/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.6.1
 asgiref==3.2.10
+beautifulsoup4==4.9.1
 billiard==3.6.3.0
 celery==4.4.7
 certifi==2020.4.5.1
@@ -31,6 +32,7 @@ requests==2.23.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 six==1.15.0
+soupsieve==2.0.1
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.9
